# statskita

./: CITATION.cff  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml  release.yml  test-install.yml
docs/: ARCHITECTURE.md  README.md  data-organization.md
examples/: sakernas_historical.py  susenas_historical.py
scripts/: convert_to_parquet.py  release.py  update_poverty_lines.py  version.py
statskita/: __init__.py
statskita/configs/: poverty_lines_2023_03.yaml  poverty_lines_2024_03.yaml
statskita/configs/sakernas/: 2023-02.yaml  2023-08.yaml  2024-02.yaml  2024-08.yaml  2025-02.yaml
statskita/configs/susenas/: 2024-03.yaml  base.yaml
statskita/core/: harmonizer.py  indicators.py  multilevel.py  survey.py  wrangler.py
statskita/exporters/: excel.py
statskita/indicators/: __init__.py  inequality.py  poverty.py
statskita/loaders/: __init__.py  bps_api.py  multi_wave.py  sakernas.py  susenas.py
statskita/sakernas/: __init__.py
statskita/utils/: __init__.py  config_utils.py  converters.py
tests/: test_core.py  test_loaders.py
